--- a/careportsapp/package.json
+++ b/careportsapp/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "@syncfusion/ej2-angular-calendars": "^17.4.40",
     "angular-animations": "0.0.10",
     "date-fns": "^2.8.1",
+    "ng-pick-datetime": "^7.0.0",
     "ng2-completer": "^3.0.3",
     "ng2-smart-table": "^1.5.0",
     "ngx-pagination": "^5.0.0",
