--- a/careportsapp/package.json
+++ b/careportsapp/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.14",
     "angular-animations": "0.0.10",
     "date-fns": "^2.8.1",
+    "file-saver": "^2.0.2",
     "ng2-completer": "^3.0.3",
     "ng2-smart-table": "^1.5.0",
     "ngx-pagination": "^5.0.0",
@@ -28,17 +29,19 @@
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.2",
     "rxjs": "~6.4.0",
+    "save": "^2.4.0",
     "tslib": "^1.10.0",
+    "xlsx": "^0.15.4",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.21",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@angular/cli": "~8.3.21",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
